# qbt-examples

./: .gitignore  README.md  install.sh  pyproject.toml  pyrightconfig.json  requirements.txt
src/: backwardation.ipynb  backwardation.py  main.ipynb  main.py
