[tool.poetry]
name = "qbt-examples"
version = "0.1.0"
description = ""
authors = ["Alpha <piotr@piotryordanov.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quantbt = "^0.8.9"
quantstats = "^0.0.62"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
